--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -11,7 +11,7 @@
 
   <div>
     <label for="email">City</label>
-    <input formControlName="city" type="city" id="city" [(ngModel)]="user.address.city">
+    <input formControlName="city" type="city" id="city">
   </div>
 
   <button [disabled]="!userForm.valid" type="submit" >Save</button>
